# ecmd

./: .gitignore  README.md
.github/workflows/: ci.yml  publish.yml
rust/: Cargo.toml
rust/core/: Cargo.toml  README.md
rust/core/src/: error.rs  lib.rs  meta.rs  operands.rs  parse.rs  polarity.rs  prelude.rs  style.rs
rust/derive/: Cargo.toml
rust/derive/src/: attrs.rs  classify.rs  codegen.rs  lib.rs
rust/tests/: Cargo.toml
rust/tests/src/: lib.rs
