[package]
name = "ecmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Type-driven command-line argument parsing"
keywords = ["cli", "argument", "parser", "posix", "flags"]
categories = ["command-line-interface"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
