[package]
name = "ecmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Type-driven command-line argument parsing"
readme = "README.md"
keywords = ["cli", "argument", "parser", "posix", "flags"]
categories = ["command-line-interface"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
ecmd-derive = { path = "../derive", optional = true }

[features]
default = ["derive"]
derive = ["ecmd-derive"]

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
